--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-dk-benzin.dk
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Fullscreen YouTube Video</title>
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      border: none;
+      height: 100%;
+      width: 100%;
+    }
+  </style>
+</head>
+<body>
+  <!-- Replace VIDEO_ID with the actual YouTube video ID -->
+  <iframe
+    src="https://www.youtube.com/embed/Ymcd6tmVFZ0?autoplay=1&mute=0&playsinline=1"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</body>
+</html>
